compiler/src/test/resources/amyc/typer/passing/Constructors.amy
module Constructors
  abstract class Foo 
  case class Bar(i: Int) : Foo
  case class Baz(b: Boolean, f: Foo) : Foo

  abstract class Foo2
  case class Bar2(i: Int) : Foo2
  case class Baz2(b: Boolean, f: Foo2) : Foo2
  Baz(true, Baz(false, Bar(42)));
  Baz2(true, Baz2(false, Bar2(42)))
end Constructors
