compiler/src/test/resources/amyc/typer/failing/EqualityError.amy
module Equality
  abstract class Foo
  case class Bar(i: Int) : Foo
  1 == Bar(2)
end Equality
